bk_ida/gobmkida/g1/first_map
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/first_map/src/engine/optics.c:1827:9: error: use of undeclared identifier 'byte_A4695F'
while ( byte_A4695F[v1] ); 
        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/first_map/src/obj/1/optics.o] Error 1
